# zulu_os

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
kernel/: .gdb_history  Cargo.toml  build.rs  cargo-asm.sh  gdb.sh  peda-session-userspace_test.txt  peda-session-zulu_os.txt  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: frame_buffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  sys.rs  vga_buffer.rs
kernel/src/allocator/: mod.rs
kernel/src/elf/: mod.rs  types.rs
kernel/src/process/: mod.rs
kernel/src/syscall/: handler.rs  io.rs  mod.rs  process.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/tests/: debug_breakpoint.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
os/: Cargo.toml  build.rs
os/src/: main.rs
src/: interrupts.rs  lib.rs  main.rs  memory.rs  sys.rs  test.rs  vga_buffer.rs
src/allocator/: bump.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
syscall/: Cargo.toml
syscall/src/: lib.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
userspace_test/: Cargo.toml  x86_64.json
userspace_test/src/: main.rs
